--- a/automations.yaml
+++ b/automations.yaml
@@ -352,8 +352,8 @@
   - condition: state
     entity_id: valve.irrigation
     state: open
-  - condition: time
-    after: input_datetime.end_of_irrigation
+  - condition: template
+    value_template: '{{now() >= as_local(as_datetime(states("input_datetime.end_of_irrigation")))}}'
   action:
   - service: valve.close_valve
     target:
@@ -733,8 +733,8 @@
   action:
   - choose:
     - conditions:
-      - condition: time
-        after: input_datetime.heating_manual_boost_end
+      - condition: template
+        value_template: '{{now() >= as_local(as_datetime(states("input_datetime.heating_manual_boost_end")))}}'
       - condition: state
         entity_id: input_boolean.heating_manual_boost
         state: 'on'
@@ -1969,8 +1969,8 @@
   - condition: state
     entity_id: media_player.music_assistant_chambre_marilou_muse_luxe
     state: playing
-  - condition: time
-    after: input_datetime.marilou_bedtime_routine_end
+  - condition: template
+    value_template: '{{now() >= as_local(as_datetime(states("input_datetime.marilou_bedtime_routine_end")))}}'
   action:
   - service: media_player.media_pause
     metadata: {}
@@ -3009,6 +3009,9 @@
     entity_id:
     - light.box_chambre_lcd_backlight
     attribute: brightness
+  - platform: state
+    entity_id:
+    - binary_sensor.box_chambre_assist_en_cours
   condition: []
   action:
   - choose:
@@ -3020,6 +3023,9 @@
           state: above_horizon
         - condition: state
           entity_id: light.chambre
+          state: 'on'
+        - condition: state
+          entity_id: binary_sensor.box_chambre_assist_en_cours
           state: 'on'
       sequence:
       - service: light.turn_on
@@ -3037,3 +3043,64 @@
         entity_id: light.box_chambre_lcd_backlight
   mode: queued
   max: 10
+- id: '1713855798081'
+  alias: "Assist - \U0001F4E3 Éteindre temporairement un assistant vocal"
+  description: ''
+  trigger:
+  - platform: conversation
+    command:
+    - Tais-toi
+    - Ta gueule
+    - Chut
+    - Silence
+  condition: []
+  action:
+  - if:
+    - condition: template
+      value_template: '{{ trigger.device_id != None}}'
+      enabled: true
+    then:
+    - service: script.turn_on
+      metadata: {}
+      data:
+        variables:
+          device: '{{trigger.device_id}}'
+      target:
+        entity_id: script.eteindre_temporairement_un_assistant_vocal
+    - set_conversation_response: A bientôt
+    else:
+    - set_conversation_response: Cette commande ne fonctionne pas depuis cet appareil
+  mode: single
+- id: '1714134719761'
+  alias: "Assist - \U0001F4E3 Réinitialiser la lumière"
+  description: ''
+  trigger:
+  - platform: conversation
+    command:
+    - réinitialise[r] (la|les) lumière[s]
+  condition: []
+  action:
+  - if:
+    - condition: template
+      value_template: '{{ trigger.device_id != None}}'
+    then:
+    - variables:
+        target_scene_list: "{% set default_scenes = label_entities(\"Scène par défaut\")
+          %}\n{% set target_area = area_id(trigger.device_id) %}\n{% set entities_in_area
+          = area_entities(target_area) %}\n\n[\n{%- for entity in entities_in_area
+          -%}\n  {%- if entity in default_scenes -%}\n    \"{{entity}}\",\n  {%- endif
+          -%}\n{%- endfor -%}\n]\n"
+    - if:
+      - condition: template
+        value_template: '{{ target_scene_list | count >=1 }}'
+      then:
+      - service: scene.turn_on
+        metadata: {}
+        target:
+          entity_id: '{{target_scene_list}}'
+      - set_conversation_response: Lumière réinitialisée
+      else:
+      - set_conversation_response: Aucune scene par defaut trouvée
+    else:
+    - set_conversation_response: Cette commande ne fonctionne pas depuis cet appareil
+  mode: single
