--- a/automations.yaml
+++ b/automations.yaml
@@ -1927,13 +1927,14 @@
   - condition: not
     conditions:
     - condition: state
-      entity_id: media_player.music_assistant_salon_kef
       state: 'off'
+      entity_id: media_player.music_assistant_salon
   action:
   - service: media_player.turn_off
     data: {}
     target:
-      entity_id: media_player.music_assistant_salon_kef
+      entity_id:
+      - media_player.music_assistant_salon
   mode: single
 - id: '1699131464359'
   alias: TV intelligente - Changer Source quand Lecture en cours sur TV
@@ -1972,20 +1973,16 @@
     id: end
   condition:
   - condition: state
-    entity_id: media_player.music_assistant_chambre_marilou_muse_luxe
+    entity_id: media_player.music_assistant_chambre_marilou
     state: playing
   - condition: template
     value_template: '{{now() >= as_local(as_datetime(states("input_datetime.marilou_bedtime_routine_end")))}}'
   action:
-  - service: media_player.media_pause
-    metadata: {}
-    data: {}
-    target:
-      entity_id: media_player.music_assistant_chambre_marilou_muse_luxe
   - service: media_player.turn_off
     data: {}
     target:
-      entity_id: media_player.music_assistant_chambre_marilou_muse_luxe
+      entity_id:
+      - media_player.music_assistant_chambre_marilou
   - service: light.turn_off
     data: {}
     target:
@@ -2005,13 +2002,14 @@
   - choose:
     - conditions:
       - condition: state
-        entity_id: media_player.music_assistant_chambre_marilou_muse_luxe
         state: playing
+        entity_id: media_player.music_assistant_chambre_marilou
       sequence:
       - service: media_player.turn_off
         data: {}
         target:
-          entity_id: media_player.music_assistant_chambre_marilou_muse_luxe
+          entity_id:
+          - media_player.music_assistant_chambre_marilou
       - service: input_datetime.set_datetime
         data:
           datetime: '{{ now() }}'
@@ -2677,69 +2675,6 @@
             entity_id: sensor.standing_desk_state
             state: seated_position
   mode: single
-- id: '1706048671788'
-  alias: Routine du sommeil Marilou - Suivant
-  description: ''
-  trigger:
-  - platform: state
-    entity_id:
-    - event.chambre_bebe_switch_button_2
-    attribute: event_type
-    to: short_release
-    id: up
-  - platform: state
-    entity_id:
-    - event.chambre_bebe_switch_button_3
-    attribute: event_type
-    to: short_release
-    id: down
-  condition:
-  - condition: state
-    entity_id: media_player.music_assistant_chambre_marilou_muse_luxe
-    state: playing
-  action:
-  - choose:
-    - conditions:
-      - condition: trigger
-        id:
-        - up
-      sequence:
-      - wait_for_trigger:
-        - platform: state
-          entity_id:
-          - event.chambre_bebe_switch_button_3
-          attribute: event_type
-          to: short_release
-        timeout:
-          hours: 0
-          minutes: 0
-          seconds: 5
-          milliseconds: 0
-        continue_on_timeout: false
-    - conditions:
-      - condition: trigger
-        id:
-        - down
-      sequence:
-      - wait_for_trigger:
-        - platform: state
-          entity_id:
-          - event.chambre_bebe_switch_button_2
-          attribute: event_type
-          to: short_release
-        timeout:
-          hours: 0
-          minutes: 0
-          seconds: 5
-          milliseconds: 0
-        continue_on_timeout: false
-  - service: media_player.media_next_track
-    metadata: {}
-    data: {}
-    target:
-      entity_id: media_player.music_assistant_chambre_marilou_muse_luxe
-  mode: queued
-  max: 10
 - id: '1707214155021'
   alias: "Bureau - \U0001F4E3 Contrôle du Standing Desk par la voix"
   description: ''
@@ -2814,11 +2749,6 @@
   - service: script.start_marilou_bedtime_routine
     metadata: {}
     data: {}
-  - service: light.turn_off
-    metadata: {}
-    data: {}
-    target:
-      area_id: chambre_bebe
   - set_conversation_response: Bonne nuit
   mode: single
 - id: '1707728356919'
@@ -3148,5 +3078,6 @@
     metadata: {}
     data: {}
     target:
-      entity_id: media_player.bureau_droite
+      entity_id:
+      - media_player.music_assistant_chambre
   mode: single
