--- a/scripts.yaml
+++ b/scripts.yaml
@@ -266,6 +266,11 @@ turn_on_media_center:
   alias: Turn On Media center
   mode: single
   sequence:
+  - service: media_player.turn_off
+    metadata: {}
+    data: {}
+    target:
+      entity_id: media_player.music_assistant_salon
   - service: media_player.turn_on
     target:
       entity_id:
