Name change of a ESPHome sensor

--- a/esphome/everything-presence-one-708114.yaml
+++ b/esphome/everything-presence-one-708114.yaml
@@ -1,6 +1,6 @@
 substitutions:
   name: everything-presence-one-708114
-  friendly_name: "Capteur Presence Marilou"
+  friendly_name: "Capteur Presence Chambre"
 packages:
   Everything_Smart_Technology.Everything_Presence_One: github://everythingsmarthome/presence-one/everything-presence-one.yaml@main
 esphome:
