--- a/automations.yaml
+++ b/automations.yaml
@@ -2063,142 +2063,6 @@
       entity_id: input_datetime.heating_manual_boost_end
   mode: queued
   max: 10
-- id: '1700265595004'
-  alias: Nettoyage Intelligent - Contrôler NeuNeu
-  description: ''
-  trigger:
-  - platform: state
-    entity_id:
-    - input_boolean.automation_clean_house
-  - platform: state
-    entity_id:
-    - input_boolean.house_cleaning_first_floor
-  - platform: state
-    entity_id:
-    - vacuum.neuneu
-    from:
-    to:
-    id: vacuum_state_change
-  - platform: state
-    entity_id:
-    - binary_sensor.home_occupied
-    from:
-    to:
-  - platform: state
-    entity_id:
-    - binary_sensor.should_neuneu_run
-  - platform: state
-    entity_id:
-    - input_boolean.guest_mode
-  - platform: state
-    entity_id:
-    - sensor.neuneu_water_tank
-    to: installed
-    for:
-      hours: 0
-      minutes: 10
-      seconds: 0
-    from: not_installed
-    id: water_tank_installed_for_more_than_10_minutes
-  - platform: homeassistant
-    event: start
-  condition:
-  - condition: state
-    entity_id: input_boolean.automation_clean_house
-    state: 'on'
-  action:
-  - if:
-    - condition: trigger
-      id:
-      - vacuum_state_change
-    - condition: state
-      entity_id: vacuum.neuneu
-      state: cleaning
-    - condition: state
-      entity_id: binary_sensor.home_occupied
-      state: 'on'
-    then:
-    - service: input_boolean.turn_on
-      data: {}
-      target:
-        entity_id: input_boolean.neuneu_triggered_while_home_occupied
-  - choose:
-    - conditions:
-      - condition: trigger
-        id:
-        - water_tank_installed_for_more_than_10_minutes
-      sequence:
-      - service: vacuum.start
-        data: {}
-        target:
-          entity_id: vacuum.neuneu
-    - conditions:
-      - condition: state
-        entity_id: binary_sensor.home_occupied
-        state: 'on'
-      - condition: state
-        entity_id: vacuum.neuneu
-        state: cleaning
-      - condition: state
-        entity_id: input_boolean.neuneu_triggered_while_home_occupied
-        state: 'off'
-      sequence:
-      - service: vacuum.return_to_base
-        data: {}
-        target:
-          entity_id: vacuum.neuneu
-    - conditions:
-      - condition: state
-        entity_id: binary_sensor.home_occupied
-        state: 'off'
-      - condition: state
-        entity_id: binary_sensor.should_neuneu_run
-        state: 'on'
-      - condition: state
-        entity_id: vacuum.neuneu
-        state: docked
-      - condition: state
-        entity_id: input_boolean.house_cleaning_first_floor
-        state: 'on'
-      - condition: state
-        entity_id: input_boolean.guest_mode
-        state: 'off'
-      sequence:
-      - service: vacuum.start
-        data: {}
-        target:
-          entity_id: vacuum.neuneu
-  - if:
-    - condition: state
-      entity_id: vacuum.neuneu
-      state: docked
-    - condition: not
-      conditions:
-      - condition: state
-        entity_id: select.neuneu_selected_map
-        state: 'Rez-de-chaussée '
-    then:
-    - service: select.select_option
-      data:
-        option: Rez-De-Chaussée
-      target:
-        entity_id: select.neuneu_selected_map
-  - if:
-    - condition: or
-      conditions:
-      - condition: state
-        entity_id: binary_sensor.home_occupied
-        state: 'off'
-      - condition: state
-        entity_id: vacuum.neuneu
-        state: docked
-    then:
-    - service: input_boolean.turn_off
-      data: {}
-      target:
-        entity_id: input_boolean.neuneu_triggered_while_home_occupied
-  mode: queued
-  max: 10
 - id: '1700410464307'
   alias: Simulation de présence
   description: ''
@@ -3076,6 +2940,12 @@
   - service: script.lancer_playlist_de_reveil
     metadata: {}
     data: {}
+    enabled: false
+  - service: script.turn_on
+    metadata: {}
+    data: {}
+    target:
+      entity_id: script.gererer_texte_radio
   - wait_for_trigger:
     - platform: state
       entity_id:
@@ -3088,4 +2958,133 @@
     target:
       entity_id:
       - media_player.music_assistant_chambre
+  - service: script.turn_off
+    metadata: {}
+    data: {}
+    target:
+      entity_id: script.gererer_texte_radio
+  mode: single
+- id: '1716920054507'
+  alias: Nettoyage Intelligent - Lancer NeuNeu si serpillère installée
+  description: ''
+  trigger:
+  - platform: state
+    entity_id:
+    - sensor.neuneu_water_tank
+    to: installed
+    for:
+      hours: 0
+      minutes: 10
+      seconds: 0
+    from: not_installed
+  condition:
+  - condition: state
+    entity_id: input_boolean.automation_clean_house
+    state: 'on'
+  action:
+  - if:
+    - condition: not
+      conditions:
+      - condition: state
+        entity_id: vacuum.neuneu
+        state: cleaning
+    then:
+    - service: vacuum.start
+      data: {}
+      target:
+        entity_id: vacuum.neuneu
+  mode: single
+- id: '1716920379412'
+  alias: Nettoyage Intelligent - RTH NeuNeu lorsque maison occupée
+  description: ''
+  trigger:
+  - platform: state
+    entity_id:
+    - binary_sensor.home_occupied
+    to: 'on'
+  condition: []
+  action:
+  - wait_for_trigger:
+    - platform: state
+      entity_id:
+      - binary_sensor.capteur_ouverture_porte_entree
+      to: 'on'
+    timeout:
+      hours: 0
+      minutes: 15
+      seconds: 0
+      milliseconds: 0
+  - if:
+    - condition: state
+      entity_id: binary_sensor.home_occupied
+      state: 'on'
+    - condition: state
+      entity_id: vacuum.neuneu
+      state: cleaning
+    then:
+    - service: vacuum.return_to_base
+      metadata: {}
+      data: {}
+      target:
+        entity_id: vacuum.neuneu
+  mode: single
+- id: '1716920545052'
+  alias: Nettoyage Intelligent - Lancer NeuNeu
+  description: ''
+  trigger:
+  - platform: state
+    entity_id:
+    - binary_sensor.home_occupied
+    to: 'off'
+  - platform: state
+    entity_id:
+    - binary_sensor.should_neuneu_run
+    to: 'on'
+  - platform: state
+    entity_id:
+    - input_boolean.guest_mode
+    to: 'off'
+  condition:
+  - condition: state
+    entity_id: input_boolean.guest_mode
+    state: 'off'
+  - condition: state
+    entity_id: input_boolean.automation_clean_house
+    state: 'on'
+  - condition: state
+    entity_id: input_boolean.house_cleaning_first_floor
+    state: 'on'
+  - condition: state
+    entity_id: binary_sensor.home_occupied
+    state: 'off'
+  - condition: state
+    entity_id: binary_sensor.should_neuneu_run
+    state: 'on'
+  action:
+  - service: vacuum.start
+    metadata: {}
+    data: {}
+    target:
+      entity_id: vacuum.neuneu
+  mode: single
+- id: '1716920627853'
+  alias: Nettoyage Intelligent - Réinitialiser Carte de nettoyage
+  description: ''
+  trigger:
+  - platform: state
+    entity_id:
+    - vacuum.neuneu
+    to: docked
+  condition:
+  - condition: not
+    conditions:
+    - condition: state
+      entity_id: select.neuneu_selected_map
+      state: Rez-De-Chaussée
+  action:
+  - service: select.select_option
+    data:
+      option: Rez-De-Chaussée
+    target:
+      entity_id: select.neuneu_selected_map
   mode: single
