--- a/scripts.yaml
+++ b/scripts.yaml
@@ -530,3 +530,158 @@ lancer_playlist_de_reveil:
       - media_player.music_assistant_chambre
   mode: single
   icon: mdi:alarm
+gererer_texte_radio:
+  alias: Radio
+  sequence:
+  - service: media_player.turn_on
+    data: {}
+    target:
+      entity_id:
+      - media_player.music_assistant_chambre
+  - service: media_player.volume_set
+    data:
+      volume_level: 0.1
+    target:
+      entity_id:
+      - media_player.music_assistant_chambre
+  - service: mass.play_media
+    target:
+      entity_id:
+      - media_player.music_assistant_chambre
+    data:
+      media_id: ⏰ Réveil
+      enqueue: replace
+      media_type: playlist
+  - service: media_player.shuffle_set
+    data:
+      shuffle: true
+    target:
+      entity_id:
+      - media_player.music_assistant_chambre
+  - wait_for_trigger:
+    - platform: state
+      entity_id:
+      - media_player.music_assistant_chambre
+      to: playing
+    timeout:
+      hours: 0
+      minutes: 0
+      seconds: 10
+      milliseconds: 0
+  - delay:
+      hours: 0
+      minutes: 1
+      seconds: 0
+      milliseconds: 0
+  - service: weather.get_forecasts
+    metadata: {}
+    data:
+      type: hourly
+    target:
+      entity_id: weather.floirac
+    response_variable: weather_forecast
+  - service: conversation.process
+    metadata: {}
+    data:
+      agent_id: conversation.gpt_radio
+      text: "- It is the first message of the stream \n- SUBJECT: TIME AND DATE. The
+        current time: {{ now().strftime(\"%X\") }} and the current date: {{now().strftime(\"%x\")
+        }}    \n- SUBJECT: WEATHER. The current weather and the forecast for the day:
+        {{weather_forecast}}\n- SUBJECT: CURRENTLY PLAYING. The current song playing:
+        {{state_attr(\"media_player.music_assistant_chambre\", \"media_title\")}}
+        by {{state_attr(\"media_player.music_assistant_chambre\", \"media_artist\")}}.
+        Add some interesting info about the song or artist, if you know. It is not
+        mandatory"
+    response_variable: welcome_radio_generated_response
+  - variables:
+      welcome_radio_generated_response_formated: '{{ welcome_radio_generated_response.response.speech.plain.speech|from_json}}'
+  - service: tts.speak
+    target:
+      entity_id: tts.home_assistant_cloud
+    data:
+      cache: true
+      media_player_entity_id: media_player.sonos_chambre
+      message: '{{welcome_radio_generated_response_formated.text}}'
+      language: fr-FR
+      options:
+        voice: ClaudeNeural
+  - delay:
+      hours: 0
+      minutes: 0
+      seconds: '{{welcome_radio_generated_response_formated.duration|int + 60}}'
+      milliseconds: 0
+  - service: conversation.process
+    metadata: {}
+    data:
+      agent_id: conversation.gpt_radio
+      text: "- This is not the first message of the stream\n- Here is your last message
+        for context: {{welcome_radio_generated_response_formated.text}}\n- SUBJECT:
+        TAKING OUT TRASH. Tell me if I need to take out my black bin or not. Here
+        is a  boolean that is true if I need to: {{states(\"input_boolean.poubelle_noire_a_sortir\")}}.
+        Tell me if I need to take out my recycling green bin or not. Here is a boolean
+        that is true if I need to: {{states(\"input_boolean.poubelle_verte_a_sortir\")}}
+        \ \n- SUBJECT: CAT LITTER. Tell me if I need to clean my cat litter. HEre
+        is a boolean that is true if I need to: {{states(\"binary_sensor.is_litter_full\")}}\n-
+        SUBJECT: CHABAN DELMAS BRIDGE. The next closing of the bridge will happen
+        between {{as_local(as_datetime(states('sensor.chaban_delmas_next_closing_start_date')))}}
+        and {{as_local(as_datetime(states('sensor.chaban_delmas_next_closing_end_date')))}}\nPlease
+        note that today's date is {{now().strftime(\"%x\") }} and that the current
+        time is {{ now().strftime(\"%X\") }}, mention the closing of the bridge only
+        it is going to happen in the next few days (or today)"
+    response_variable: task_radio_generated_response
+  - variables:
+      task_radio_generated_response_formated: '{{ task_radio_generated_response.response.speech.plain.speech|from_json}}'
+  - service: tts.speak
+    target:
+      entity_id: tts.home_assistant_cloud
+    data:
+      cache: true
+      media_player_entity_id: media_player.sonos_chambre
+      message: '{{task_radio_generated_response_formated.text}}'
+      language: fr-FR
+      options:
+        voice: ClaudeNeural
+  - delay:
+      hours: 0
+      minutes: 0
+      seconds: '{{task_radio_generated_response_formated.duration|int + 60}}'
+      milliseconds: 0
+  - service: calendar.get_events
+    metadata: {}
+    data:
+      duration:
+        hours: 24
+        minutes: 0
+        seconds: 0
+    target:
+      entity_id: calendar.nabucasa_calendar_personal
+    response_variable: calendar_events
+  - service: conversation.process
+    metadata: {}
+    data:
+      agent_id: conversation.gpt_radio
+      text: "- This is not the first message of the stream\n- Here is your last two
+        messages for context.\n- Message 1: {{welcome_radio_generated_response_formated.text}}\n-
+        Message 2: {{task_radio_generated_response_formated.text}}\n- SUBJECT: PROFESSIONAL
+        MEETINGS. The meetings I need to attend at work. Here are the events for the
+        next 24 hours: {{calendar_events}} \nPlease note that today's date is {{now().strftime(\"%x\")
+        }} and that the current time is {{ now().strftime(\"%X\") }}. Ignore all events
+        happening tomorrow, I am only interested but today's schedule.\nPlease remeber
+        that you are a radio host. The text you generate will be spoken, so no URL.\nPlease
+        remeber that the household is French, try to translate events name as much
+        as possible.\n- This is the last message of the stream."
+    response_variable: calendar_radio_generated_response
+  - variables:
+      calendar_radio_generated_response_formated: '{{calendar_radio_generated_response.response.speech.plain.speech|from_json}}'
+  - service: tts.speak
+    target:
+      entity_id: tts.home_assistant_cloud
+    data:
+      cache: true
+      media_player_entity_id: media_player.sonos_chambre
+      message: '{{calendar_radio_generated_response_formated.text}}'
+      language: fr-FR
+      options:
+        voice: ClaudeNeural
+  mode: single
+  icon: mdi:radio
