PLay media intent update

--- a/custom_sentences/fr/play_media_on_mass.yaml
+++ b/custom_sentences/fr/play_media_on_mass.yaml
@@ -1,6 +1,6 @@
 language: "fr"
 intents:
-  PlayWhatever:
+  PlayMusic:
     data:
       - sentences:
           - (Jouer|Joue|Écouter|Écoutez|Ecouter|Ecoutez) {query}
